Fixed some routes
